# magnet-watchtower

./: .gitignore  Cargo.toml  README.md  domains.json  env.example  vercel.json
api/: check.rs
